# bouija

./: README.md
firmware/simple/: README.md  partitions.csv  sdkconfig
firmware/simple/main/: ARCHITECTURE.md  CMakeLists.txt  app_flow.c  app_flow.h  led.c  led.h  main.c  touch.c  touch.h
firmware/tinyllama/main/: CMakeLists.txt  idf_component.yml  led.c  led.h  llm.c  llm.h  main.c
pcb/: LLM Business Card.kicad_pcb  LLM Business Card.kicad_prl  LLM Business Card.kicad_pro  LLM Business Card.kicad_sch  NeoPixel.kicad_sch  TouchPad.bak  TouchPad.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table  ~LLM Business Card.kicad_sch.lck
pcb/1N5819HW-7-F/: SOD3715X145N.kicad_mod
pcb/LESD5D5.0CT1G/: LESD5D5.0CT1G.kicad_sym  LESD5D5.0CT1G.step  TVS_LESD5D5.0CT1G.kicad_mod
pcb/Library.pretty/: FrontSilk.kicad_mod  Ouija.kicad_mod  Rocket.kicad_mod  Sign.kicad_mod  TouchPad.kicad_mod
pcb/PTS810_SJM_250_SMTR_LFS/: PTS810_SJM_250_SMTR_LFS.kicad_sym  SW_PTS810_SJM_250_SMTR_LFS.kicad_mod
pcb/nextpcb/gerber/: LLM Business Card-CuBottom.gbr  LLM Business Card-CuTop.gbr  LLM Business Card-EdgeCuts.gbr  LLM Business Card-MaskBottom.gbr  LLM Business Card-MaskTop.gbr  LLM Business Card-NPTH.drl  LLM Business Card-PTH.drl  LLM Business Card-PasteBottom.gbr  LLM Business Card-PasteTop.gbr  LLM Business Card-SilkBottom.gbr  LLM Business Card-SilkTop.gbr  LLM Business Card-VScore.gbr
pcb/nextpcb/production_files/: BOM-LLM Business Card.csv  CPL-LLM Business Card.csv
